test/invalid-syntax/fc51601_invalid_parameterless_invocation/invalid_invocation.mag
--- Author: fc51601, José Sousa

-- parameter functions are invoced like "func1(unit)"

fun func1 (_) : Unit -> Unit = print("Is this a lambda?")
fun main (_) : Unit -> Unit = func1()